@@ -176,6 +176,7 @@ LRESULT CALLBACK CWDMsgWnd::WinProc(UINT msg,WPARAM wParam,LPARAM lParam)
     DestroyWindow(m_hWnd);
     return 0;
   case WM_CTLCOLORSTATIC:
+    SetTextColor((HDC)wParam,GetSysColor(COLOR_WINDOWTEXT));
     SetBkMode((HDC)wParam,TRANSPARENT);
   case WM_CTLCOLORDLG:
     return (DWORD_PTR)m_bkBrush;
